Fix: .gitignore to correctly ignore build artifacts and node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.*
 .pnp.js
 pnpm-lock.yaml
@@ -14,12 +14,16 @@ pnpm-lock.yaml
 !.yarn/versions
 
 # Build outputs
-/build
-/dist
-/out/
+build/
+dist/
+out/
+.next/
+next-env.d.ts
+*.tsbuildinfo
+.vercel
 
 # Testing
-/coverage
+coverage/
 
 # Misc
 .DS_Store
@@ -38,12 +42,6 @@ yarn-error.log*
 
 # Turborepo
 .turbo
-
-# Next.js
-/.next/
-next-env.d.ts
-*.tsbuildinfo
-.vercel
 
 # React Native
 # Xcode
@@ -67,24 +65,9 @@ DerivedData
 .expo/
 *.jks
 *.keystore
-android/keystores/
-android/app/build/
-android/.gradle
-android/local.properties
-ios/build/
-ios/Pods/
-ios/.xcode.env
-ios/.xcode.env.local
-ios/*.xcworkspace
-ios/.xccheckout
-ios/DerivedData
-ios/mobile.xcodeproj/project.xcworkspace
-ios/mobile.xcodeproj/xcuserdata
-ios/mobile.xcworkspace
-ios/mobile.xcworkspace/xcuserdata
-
-# Android/IntelliJ
-.idea
+android/
+ios/
+.idea/
 *.iml
 *.hprof
 .cxx/
@@ -104,4 +87,4 @@ ios/mobile.xcworkspace/xcuserdata
 *.jsbundle
 
 # Ruby/CocoaPods
-/vendor/bundle/
+vendor/bundle/
