--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,58 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # Dependencies
-node_modules/
-.pnp
-.pnp.*
-.pnp.js
-pnpm-lock.yaml
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+**/node_modules
 
-# Build outputs
+# Build artifacts
+/dist
 build/
-dist/
+**/.next/
 out/
-.next/
-next-env.d.ts
-*.tsbuildinfo
-.vercel
+**/.expo/
+.expo-shared/
+.turbo/
 
-# Testing
-coverage/
-
-# Misc
-.DS_Store
-*.pem
+# Logs
 *.log
-.env
-.env.local
-.env.*.local
-.vscode/
-
-# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Turborepo
-.turbo
+# Local files
+my_files/
 
-# React Native
-# Xcode
-build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-**/.xcode.env.local
-.expo/
-*.jks
-*.keystore
-android/
-ios/
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDEs and editors
 .idea/
-*.iml
-*.hprof
-.cxx/
-!debug.keystore
-.kotlin/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Metro
-.metro-health-check*
+# OS-specific
+.DS_Store
+Thumbs.db
 
-# Fastlane
-**/fastlane/report.xml
-**/fastlane/Preview.html
-**/fastlane/screenshots
-**/fastlane/test_output
+# Lock files
+package-lock.json
+yarn.lock
 
-# Bundle artifact
-*.jsbundle
+# Expo
+*.jks
+*.p12
+*.keystore
+*.p8
+*.mobileprovision
 
-# Ruby/CocoaPods
-vendor/bundle/
+# Test
+coverage/
+
+GEMINI.md
