--- a/package.json
+++ b/package.json
@@ -1,16 +1,38 @@
 {
-  "name": "my-turborepo",
+  "name": "unpack",
   "private": true,
+  "packageManager": "pnpm@10.17.0",
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "dev": "turbo run dev --parallel",
+    "build": "turbo run build",
+    "lint": "turbo run lint",
+    "depcheck": "depcheck"
   },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "prettier": "^3.2.5",
-    "turbo": "latest"
+    "depcheck": "^1.4.7",
+    "turbo": "latest",
+    "typescript": "^5.9.2"
   },
-  "packageManager": "pnpm@8.6.0"
+  "pnpm": {
+    "overrides": {
+      "react": "19.1.0",
+      "react-dom": "19.1.0",
+      "react-native-reanimated": "4.1.0",
+      "@expo/vector-icons": "15.0.2",
+      "expo": "54.0.7",
+      "expo-constants": "18.0.9",
+      "expo-font": "14.0.8",
+      "expo-asset": "12.0.8",
+      "expo-file-system": "19.0.14",
+      "expo-keep-awake": "15.0.7",
+      "@types/react": "19.1.0"
+    }
+  },
+  "dependencies": {
+    "react-native-gesture-handler": "^2.28.0"
+  }
 }
