--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,7 +2,9 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "main": "./src/index.ts",
   "exports": {
+    ".": "./src/index.ts",
     "./card": "./src/card.tsx"
   },
   "scripts": {
