--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unpack-mobile",
+  "name": "milcalc-mobile",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
