--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,17 +9,18 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-picker/picker": "^2.11.1",
     "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
-    "expo": "^54.0.7",
+    "expo": "54.0.10",
     "expo-blur": "^15.0.7",
     "expo-constants": "~16.0.2",
     "expo-haptics": "^15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.7",
+    "expo-router": "~6.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "18.2.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "^5.6.1"
   }
 }
