--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -25,6 +25,7 @@
     },
     "android": {
       "package": "dev.milcalc.mobile",
+      "softwareKeyboardLayoutMode": "resize",
       "config": {
         "googleMaps": {
           "apiKey": "YOUR_GOOGLE_MAPS_API_KEY_HERE"
