feat: Refactor Neumorphic components and fix SegmentedSelector
- Refactored NeumorphicOutset and NeumorphicInset to be pure styling components, delegating layout and physical properties to consumers.

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "expo start --lan",
+    "dev:clear": "expo start --lan --clear",
     "android": "expo run:android",
     "ios": "expo run:ios"
   },
