--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,10 +2,26 @@
   "name": "@repo/eslint-config",
   "version": "0.0.0",
   "private": true,
-  "files": ["index.js"],
+  "main": "index.js",
+  "files": [
+    "index.js",
+    "base.js",
+    "react-native.js"
+  ],
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.1.0",
+    "eslint-config-turbo": "^1.12.4"
+  },
   "devDependencies": {
-    "@vercel/style-guide": "^5.2.0",
-    "eslint-config-turbo": "^1.12.4",
+    "eslint": "^8.57.0",
     "typescript": "^5.3.3"
+  },
+  "peerDependencies": {
+    "eslint": ">=8.0.0",
+    "typescript": ">=5.0.0"
   }
 }
