refactor: Rename project from unpack to milcalc
- Updates all instances of unpack to milcalc across the project.

--- a/apps/mobile/android/app/build.gradle
+++ b/apps/mobile/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'dev.unpack.mobile'
+    namespace 'dev.milcalc.mobile'
     defaultConfig {
-        applicationId 'dev.unpack.mobile'
+        applicationId 'dev.milcalc.mobile'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
