--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/metro-runtime": "6.1.2",
     "@react-native-picker/picker": "2.11.1",
+    "@repo/data": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
     "expo": "54.0.10",
