--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "milcalc",
   "private": true,
-  "packageManager": "pnpm@10.17.1",
+  "packageManager": "pnpm@10.18.1",
   "scripts": {
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.74.0",
     "react-native-gesture-handler": "^2.28.0"
   }
 }
