--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,45 @@
-# Dependencies
-**/node_modules
+# Node.js
+node_modules
+npm-debug.log
+yarn-error.log
 
-# Build artifacts
-/dist
-build/
-**/.next/
-out/
-**/.expo/
-.expo-shared/
-.turbo/
-
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Local files
-my_files/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDEs and editors
-.idea/
-.vscode/
+# IDEs / Editors
+.idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
 
 # OS-specific
 .DS_Store
 Thumbs.db
 
-# Lock files
-package-lock.json
-yarn.lock
+# Build artifacts
+/build
+/dist
+/.next
+/out
 
 # Expo
-*.jks
-*.p12
-*.keystore
-*.p8
-*.mobileprovision
+.expo/
 
-# Test
-coverage/
+# Android
+/android/app/build
+/android/build
 
-packages/data/
+# iOS
+/ios/build
+
+# Other
+.pnp
+.pnp.js
+/coverage
+.env
+.env.local
+
+# Vercel
+.vercel
+
+# Ignore packages/data
+packages/data
